platforms/drm: handle hotplugs with disabled outputs better

If the last enabled output gets removed but we have disabled outputs
still connected, enable the first disabled output to prevent a crash.

BUG: 442990


(cherry picked from commit 178e69b39b7c7ccc4e3d9f4ea85b2fde15eeac2a)