src/plugins/platforms/drm/drm_backend.cpp
@@ -332,6 +332,14 @@ void DrmBackend::removeOutput(DrmAbstractOutput *o)
         m_placeHolderOutput->renderLoop()->inhibit();
     }
     if (m_enabledOutputs.contains(o)) {
+        if (m_enabledOutputs.count() == 1) {
+            for (const auto &output : qAsConst(m_outputs)) {
+                if (output != o) {
+                    output->setEnabled(true);
+                    break;
+                }
+            }
+        }
         m_enabledOutputs.removeOne(o);
         Q_EMIT outputDisabled(o);
     }
